# Human-Following-Autonomous-Robot

./: .gitignore  README.md
ArucoMarkers/: detect_aruco_4x4.py
experiments/: exp1_detection_opencv_aruco.py  exp1_detection_yolo.py  exp2_gesture_classification.py  exp3_track_target's_hand  exp3_track_target's_hand.py  exp4_auto_driving.py  pe2_avg_switching_time.py
experiments/pe4/: draw_object_pe4.py  pe4_gesture_accuracy.py  preprocessdata_pe4.py
mediapipe/hands/: create_dataset.py  test.py  train.ipynb
scout_bringup/: drive.py  key_move.py  main.py  object_track_marker_person.py  object_track_one_person.py  predict_object.py  save_model.py  save_model_marker.py  scout_motor_right_pub.py  target.py
test-aruco-cpp/helloworldcpp/: hello
test-aruco-cpp/test-1/: CMakeLists.txt  test-1.cpp
test-aruco-python/test-aruco/: ArucoModule.py
train-ArUco-yolov4/: 220415.ipynb  change_ArUco_annotations.ipynb
train-ArUco-yolov4-tiny/: 220505.ipynb
train-Combined-yolov4/: combine-MobilityAids-ArUco-yolov4.ipynb
train-MobilityAids/: train-yolov4_draft.ipynb
train-MobilityAids-yolov4/: 220321.ipynb  train-MobilityAids-yolov4_draft.ipynb
train-yolo/train-ArUco-yolov5/: ArUco_test_220124.ipynb
train-yolo/train-Combined-yolov4/: 220411.ipynb
train-yolo/train-Interaction-yolov4-tiny/: 220516.ipynb  220530.ipynb  220607.ipynb  220609.ipynb  create-Interaction.ipynb
train-yolo/train-MobilityAids-yolov4/: 220328.ipynb
train-yolo/train-Person-yolov4-tiny/: 220506.ipynb
train-yolo/yolov4-train_draft/: obj.names
yolov4-train_draft/: obj.data  yolov4-custom.cfg
(+7 files in other folders)
